{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 25,
  "lineage": "008324e6-749c-cb5f-5a3d-38f78250db23",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:142127128490:internet-gateway/igw-0c3678669fc455eac",
            "id": "igw-0c3678669fc455eac",
            "owner_id": "142127128490",
            "region": "eu-central-1",
            "tags": {
              "Managed": "terraform",
              "Name": "cloud-lab-igw",
              "Project": "cloud-lab"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "cloud-lab-igw",
              "Project": "cloud-lab"
            },
            "vpc_id": "vpc-0df74589b1c1f8259"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:loadbalancer/app/cloud-lab-alb/3117fc88c13e6de5",
            "arn_suffix": "app/cloud-lab-alb/3117fc88c13e6de5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloud-lab-alb-343957439.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:loadbalancer/app/cloud-lab-alb/3117fc88c13e6de5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloud-lab-alb",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-0081adf168343652b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b9c0db2a7436f98"
              },
              {
                "subnet_id": "subnet-030e1bb21531335b0"
              }
            ],
            "subnets": [
              "subnet-01b9c0db2a7436f98",
              "subnet-030e1bb21531335b0"
            ],
            "tags": {
              "Managed": "terraform",
              "Name": "cloud-lab-alb",
              "Project": "cloud-lab"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "cloud-lab-alb",
              "Project": "cloud-lab"
            },
            "vpc_id": "vpc-0df74589b1c1f8259",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:loadbalancer/app/cloud-lab-alb/3117fc88c13e6de5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:listener/app/cloud-lab-alb/3117fc88c13e6de5/bcf40942ac68223c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:targetgroup/cloud-lab-tg/119a12cac9ff4780",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:listener/app/cloud-lab-alb/3117fc88c13e6de5/bcf40942ac68223c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:loadbalancer/app/cloud-lab-alb/3117fc88c13e6de5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:listener/app/cloud-lab-alb/3117fc88c13e6de5/bcf40942ac68223c"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:targetgroup/cloud-lab-tg/119a12cac9ff4780",
            "arn_suffix": "targetgroup/cloud-lab-tg/119a12cac9ff4780",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:targetgroup/cloud-lab-tg/119a12cac9ff4780",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloud-lab-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed": "terraform",
              "Name": "cloud-lab-tg",
              "Project": "cloud-lab"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "cloud-lab-tg",
              "Project": "cloud-lab"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0df74589b1c1f8259"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:142127128490:targetgroup/cloud-lab-tg/119a12cac9ff4780"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c3678669fc455eac",
            "id": "r-rtb-0870c1e9516e15f721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-0870c1e9516e15f72",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "142127128490",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-0870c1e9516e15f72"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.public",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:142127128490:route-table/rtb-0870c1e9516e15f72",
            "id": "rtb-0870c1e9516e15f72",
            "owner_id": "142127128490",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Managed": "terraform",
              "Name": "cloud-lab-public",
              "Project": "cloud-lab"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "cloud-lab-public",
              "Project": "cloud-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df74589b1c1f8259"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "142127128490",
            "id": "rtb-0870c1e9516e15f72",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eb18ffa158df84f",
            "region": "eu-central-1",
            "route_table_id": "rtb-0870c1e9516e15f72",
            "subnet_id": "subnet-030e1bb21531335b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056b2c26d5c08d7da",
            "region": "eu-central-1",
            "route_table_id": "rtb-0870c1e9516e15f72",
            "subnet_id": "subnet-01b9c0db2a7436f98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:142127128490:security-group/sg-0081adf168343652b",
            "description": "Allow inbound HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0081adf168343652b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloud-lab-alb",
            "name_prefix": "",
            "owner_id": "142127128490",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed": "terraform",
              "Name": "cloud-lab-alb",
              "Project": "cloud-lab"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "cloud-lab-alb",
              "Project": "cloud-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df74589b1c1f8259"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "142127128490",
            "id": "sg-0081adf168343652b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:142127128490:security-group/sg-0c7852bb6dd11f9b5",
            "description": "Allow traffic from the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7852bb6dd11f9b5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0081adf168343652b"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "cloud-lab-service",
            "name_prefix": "",
            "owner_id": "142127128490",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Managed": "terraform",
              "Name": "cloud-lab-service",
              "Project": "cloud-lab"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "cloud-lab-service",
              "Project": "cloud-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df74589b1c1f8259"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "142127128490",
            "id": "sg-0c7852bb6dd11f9b5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:142127128490:subnet/subnet-030e1bb21531335b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030e1bb21531335b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142127128490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Managed": "terraform",
              "Name": "cloud-lab-public-0",
              "Project": "cloud-lab",
              "Tier": "public"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "cloud-lab-public-0",
              "Project": "cloud-lab",
              "Tier": "public"
            },
            "vpc_id": "vpc-0df74589b1c1f8259"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "142127128490",
            "id": "subnet-030e1bb21531335b0",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:142127128490:subnet/subnet-01b9c0db2a7436f98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b9c0db2a7436f98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "142127128490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Managed": "terraform",
              "Name": "cloud-lab-public-1",
              "Project": "cloud-lab",
              "Tier": "public"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "cloud-lab-public-1",
              "Project": "cloud-lab",
              "Tier": "public"
            },
            "vpc_id": "vpc-0df74589b1c1f8259"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "142127128490",
            "id": "subnet-01b9c0db2a7436f98",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:142127128490:vpc/vpc-0df74589b1c1f8259",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06621fb814d012d41",
            "default_route_table_id": "rtb-04ee5cf3c924e3c4f",
            "default_security_group_id": "sg-085311d676e6e16a4",
            "dhcp_options_id": "dopt-0d26c048c6b97e798",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0df74589b1c1f8259",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ee5cf3c924e3c4f",
            "owner_id": "142127128490",
            "region": "eu-central-1",
            "tags": {
              "Managed": "terraform",
              "Name": "cloud-lab-vpc",
              "Project": "cloud-lab"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "cloud-lab-vpc",
              "Project": "cloud-lab"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "142127128490",
            "id": "vpc-0df74589b1c1f8259",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}